# assumpcheck

./: .gitignore  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
assumpcheck/: __init__.py  anova.py  interpret.py  linear_regression.py  logistic_regression.py  metrics.py  plots.py  reporting.py  types.py
examples/: assumpcheck_examples.ipynb  basic_usage.py  build_workflow_artifacts.py  workflow.md
prod-test/: pyvenv.cfg
test-install/: pyvenv.cfg
tests/: test_end_to_end.py  test_reporting.py
