[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "assumpcheck"
version = "0.1.3"
description = "Simple statistical assumption checks for ANOVA, linear regression, and logistic regression."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["anova", "assumption-checking", "linear-regression", "logistic-regression", "statistics", "statsmodels"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Education",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "scipy>=1.10",
  "statsmodels>=0.14",
  "matplotlib>=3.7"
]

[project.urls]
Homepage = "https://github.com/Josiah-DeValois/assumpcheck"
Repository = "https://github.com/Josiah-DeValois/assumpcheck"
Issues = "https://github.com/Josiah-DeValois/assumpcheck/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[tool.setuptools.packages.find]
include = ["assumpcheck*"]
